[gd_scene load_steps=9 format=3 uid="uid://b33gyuhuph7aq"]

[ext_resource type="FontFile" uid="uid://p0vlikd53qtd" path="res://assets/fonts/monocraft/Monocraft.otf" id="1_56gr5"]
[ext_resource type="Theme" uid="uid://lun7iyf6nhym" path="res://data/themes/ui_theme.tres" id="1_whwrg"]
[ext_resource type="Script" path="res://ui/title_screen/title_screen.gd" id="2_gh2g7"]
[ext_resource type="Texture2D" uid="uid://dfyilufngsfrv" path="res://assets/textures/block/dirt.png" id="2_owdkt"]
[ext_resource type="Texture2D" uid="uid://eajb8471ltfb" path="res://assets/icons/discord-brands.svg" id="5_xim04"]
[ext_resource type="Texture2D" uid="uid://b2vm8vxv668tc" path="res://assets/icons/itch-io-brands.svg" id="6_ba516"]
[ext_resource type="Texture2D" uid="uid://lpd73n2eo1gf" path="res://assets/icons/github-brands.svg" id="7_6hgnq"]

[sub_resource type="LabelSettings" id="LabelSettings_wxioq"]
font_size = 64

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_whwrg")
script = ExtResource("2_gh2g7")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_owdkt")
stretch_mode = 1

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -149.5
offset_top = 113.0
offset_right = 149.5
offset_bottom = 204.0
grow_horizontal = 2
text = "Voxiverse"
label_settings = SubResource("LabelSettings_wxioq")

[node name="SplashText" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -371.0
offset_top = 242.0
offset_right = 371.0
offset_bottom = 282.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("1_56gr5")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][wave][color=yellow] Definitely not minecraft [/color][/wave][/center]"
fit_content_height = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -491.5
offset_top = -73.0
offset_right = 491.5
offset_bottom = 366.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13
alignment = 1

[node name="Singleplayer" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2i(0, 100)
offset_right = 983.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 32
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2i(0, 100)
offset_top = 113.0
offset_right = 983.0
offset_bottom = 213.0
theme_override_font_sizes/font_size = 32
text = "Multiplayer"

[node name="Options" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2i(0, 100)
offset_top = 226.0
offset_right = 983.0
offset_bottom = 326.0
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2i(0, 100)
offset_top = 339.0
offset_right = 983.0
offset_bottom = 439.0
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -17.0
offset_right = 40.0
grow_vertical = 0
theme_type_variation = &"HeaderSmall"
text = "Development build"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
offset_right = 64.0
offset_bottom = 51.0
texture = ExtResource("5_xim04")

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
offset_left = 68.0
offset_right = 119.0
offset_bottom = 51.0
texture = ExtResource("6_ba516")

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
offset_left = 123.0
offset_right = 173.0
offset_bottom = 51.0
texture = ExtResource("7_6hgnq")

[node name="ExitConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(599, 100)
ok_button_text = "Yes, I want to leave!"
dialog_text = "Do you want to leave the game?"
